add @RequestHeader("Authorization") String auth in the secured controller methods